<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
<item android:title="@string/refresh" android:id="@+id/main_activity_menu_refresh" android:icon="@drawable/ic_menu_refresh"></item>
<item android:title="@string/about" android:id="@+id/main_activity_menu_about" android:icon="@android:drawable/ic_menu_info_details"></item>
<item android:id="@+id/menu_login" android:title="@string/menu_login" android:icon="@android:drawable/ic_menu_manage" android:visible="false"></item>
<item android:id="@+id/menu_logout" android:title="@string/menu_logout" android:icon="@android:drawable/ic_menu_close_clear_cancel" android:visible="false"></item>
<item android:id="@+id/main_activity_menu_help" android:title="@string/menu_help" android:icon="@android:drawable/ic_menu_help"></item>
<item android:id="@+id/main_activity_report_bug" android:title="@string/menu_report_bug" android:icon="@android:drawable/ic_menu_edit"/>
</menu>
