<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
     <ImageView
	  	android:id="@+id/header_image"
	  	android:layout_width="wrap_content"
	  	android:layout_height="wrap_content"
	  	android:src="@drawable/tekpub_logo_header"
	  	android:padding="5dip"
	  	android:layout_gravity="left" 
  	/>
    <TextView
		android:id="@+id/episode_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Episode Title"
        android:textStyle="bold"
        android:textSize="18dp"
        android:textColor="@color/category_name_color"
         />
     <TextView
		android:id="@+id/production_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Production Title"
        android:textColor="@color/sub_head_color"
         />
	 <TextView
	   android:id="@+id/separator_text"
	   android:layout_width="fill_parent"
	   android:layout_height="wrap_content"
	   android:layout_marginTop="15dip"
	   android:padding="5dip"
	   android:background="@color/separator_bg_color"
	   android:textColor="@color/separator_text_color"
	   android:textStyle="bold"
	   android:text="@string/video_category_details_separator"/>
	 <TextView  
	   android:id="@+id/episode_details"
	   android:layout_width="fill_parent"
	   android:padding="6dip"
	   android:layout_height="wrap_content"
	   android:text="Lorem ipsum dolor sit alem" />
	 <Button
	 	android:id="@+id/watch_button"
	 	android:layout_width="200dip" 
	 	android:layout_height="wrap_content"
	 	android:text="@string/watch" 
	 	android:padding="10dp"
	 	android:textColor="#fff" 
	 	android:textStyle="bold"
	 	android:background="@drawable/tekpub_button"
	 	android:layout_marginTop="12dip"
	 	android:layout_gravity="center_horizontal" />
	 <Button
	 	android:id="@+id/unavailable_button"
	 	android:layout_width="200dip" 
	 	android:layout_height="wrap_content"
	 	android:text="@string/unavailable" 
	 	android:visibility="gone"
	 	android:textColor="#fff" 
	 	android:textStyle="bold"
	 	android:layout_marginTop="12dip"
	 	android:background="@drawable/tekpub_button" 
	 	android:layout_gravity="center_horizontal" />
     <ProgressBar  
           style="android:attr/progressBarStyleHorizontal" 
           android:layout_height="wrap_content" 
           android:layout_width="fill_parent"
           android:max="100" 
           android:progress="0"   
           android:layout_marginLeft="10dip"  
           android:id="@+id/episode_download_progress_bar" 
           android:visibility="gone"
           />  
</LinearLayout>
